# py_cpp_interaction

./: CMakeLists.txt  CPM.cmake  README.md
src/: cpp2py_binding.cpp
